--- a/Unidad 2/comidas.html
+++ b/Unidad 2/comidas.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1>Categorías de comida</h1>
-    <button id="listarCategorias" style="margin-bottom:5%;">Traer Datos</button>
+    <button id="listarCategorias" class="btn btn-info" style="margin:5%;">Traer Datos</button>
     <div class="container">
         <div class="row" id = "categoriasComida">
 
