--- a/Unidad 2/jquerydom.html
+++ b/Unidad 2/jquerydom.html
@@ -96,11 +96,13 @@
                        var tel= $("#tel").val();
                        var domicilio= $("#domicilio").val();
                         if(nombre==""){
-                          alert("Por favor, ponga un nombre")  
+                          //alert("Por favor, ponga un nombre")
+						  $("#nombre").css("border-color", "red",
+											"border-style", " solid",
+											"border-width", "1px"); 
+							$("#nombre").attr("placeholder", "Ponga un nombre profa , no sea gil");
                         }
-                        
-                       console.log(nombre);
-                       alert("hi")
+
                     })
                 })
 
